service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strategicai
  labels:
    app: strategicai
